# martin-config

./: .dockerignore  .env.example  .gitignore  Dockerfile  Pipfile  README.md  entry_points.cfg  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-publish.yml
processing/: __main__.py  azfile.py  config.py  utils.py
src/: config.py
src/martin-config/: config.py
src/martin_config/: __init__.py  __main__.py  azfile.py  cfg.py  config.py  db.py  utils.py
src/martin_config/sql/: column_is_accessible.sql  delete_col_comment.sql  delete_table_comment.sql  drop_table.sql  func_sources.sql  function_is_accessible.sql  get_col_comment.sql  get_computed_bbox.sql  get_estimated_bbox.sql  get_table_columns.sql  get_table_columns_meta.sql  get_table_comment.sql  get_table_primary_key.sql  list_databases.sql  list_schema_tables.sql  list_tables.sql  schema_is_accessible.sql  set_col_comment.sql  set_table_comment.sql  table_exists.sql  table_is_accessible.sql
