[flake8]
max-line-length=100
ignore=W293, W504
max-complexity=10

[isort]
line_length = 100
force_single_line = true

[metadata]
name = martin-config
version = 0.0.1
url = https://github.com/UNDP-Data/martin-config
author = Ioan Ferencik
author_email = ioan.ferencik@undp.org
# license_file = LICENSE
description = This package is to generate config.yaml for martin from PostGIS database.
long_description = file: README.md

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
entry_points = file: entry_points.cfg

[options.packages.find]
where = src
include = martin-config
